update tmux with clean status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,8 @@ bind Escape copy-mode
 unbind p
 bind-key p paste-buffer
 
+bind-key a "detach-client -a"
+
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
@@ -30,14 +32,30 @@ set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @resurrect-processes 'e emacsclient ranger htop'
 
-# THEME
+# base00: "1f2022" # ----
+# base01: "282828" # ---
+# base02: "444155" # --
+# base03: "585858" # -
+# base04: "b8b8b8" # +
+# base05: "a3a3a3" # ++
+# base06: "e8e8e8" # +++
+# base07: "f8f8f8" # ++++
+# base08: "f2241f" # Red
+# base09: "ffa500" # Orange
+# base0A: "b1951d" # Yellow
+# base0B: "67b11d" # Green
+# base0C: "2d9574" # Aqua
+# base0D: "4f97d7" # Blue
+# base0E: "a31db1" # Purple
+# base0F: "b03060" # Maroon
+
 set -g status-position top
-set -g window-status-separator '|'
-set -g status-bg default
-set -g status-fg default
-set -g window-status-format ' #I #W '
-set -g window-status-current-format ' #I #W '
-set -g status-interval 1
-set -g status-left-length 30
-set -g status-left '#(echo $USER_NAME) |'
-set -g status-right '#(termux-battery-status | jq .percentage)%% %H:%M'
+set -g status-justify centre
+set -g status-left-length 85
+set -g status-right-length 85
+
+set-option -g status-style fg=white,bg=#444155
+
+set-option -g status-left "#[fg=#1f2022,bg=#ffa500,bold] 💻 #S "
+
+set-option -g status-right ""
