--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,9 +53,10 @@ set -g status-position top
 set -g status-justify centre
 set -g status-left-length 85
 set -g status-right-length 85
+set -g status-bg default
 
-set-option -g status-style fg=white,bg=#444155
+# set-option -g status-style fg=white,bg=#444155
 
-set-option -g status-left "#[fg=#1f2022,bg=#ffa500,bold] 💻 #S "
+# set-option -g status-left "#[fg=#1f2022,bg=#ffa500,bold] 💻 #S "
 
-set-option -g status-right ""
+# set-option -g status-right ""
