--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,16 +5,8 @@ set -g pane-base-index 1
 set -g mouse on
 setw -g mode-keys vi
 set -sg escape-time 0
+set -g display-panes-time 2500
 
-unbind [
-bind Escape copy-mode
-
-unbind p
-bind-key p paste-buffer
-
-bind-key a "detach-client -a"
-
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-sensible       \
@@ -30,16 +22,23 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
-set -g @resurrect-processes 'e emacsclient ranger htop'
 
-set -g status-position top
+set -g status-position bottom
 set -g status-justify centre
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-bg default
 
-set-option -g status-style fg=white,bg=default
+set-option -g status-style fg=white,bg=#444155
+set-option -g status-left "#[fg=#444155,bg=#ffa500,bold] 💻 #S "
 
-set-option -g status-left "#[fg=#1f2022,bg=#ffa500,bold] 💻 #S "
+unbind [
+bind Escape copy-mode
 
- set-option -g status-right ""
+unbind p
+bind-key p paste-buffer
+
+bind-key a "detach-client -a"
+bind-key -n C-F11 set -g status
+
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
