update tmux status; add kill-session binding

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,13 +24,19 @@ set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
 set -g status-position bottom
-set -g status-justify centre
+set -g status-justify left
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-bg default
 
-set-option -g status-style fg=white,bg=#444155
-set-option -g status-left "#[fg=#444155,bg=#ffa500,bold] 💻 #S "
+set-option -g status-left "#[fg=#444155,bg=#ffa500,bold] 💻 #S  #[bg=default,fg=#ffa500,bold]  "
+set-option -g status-right ""
+
+set-option -g window-style 'fg=#444444,bg=default'
+set-option -g window-active-style 'fg=#ffffff,bg=default'
+
+setw -g window-status-format '#[fg=#aaaaaa,bg=default]#[fg=#333333,bg=#aaaaaa] #I #W #[fg=#aaaaaa,bg=default] '
+setw -g window-status-current-format '#[fg=#444155,bg=#ffa500] #I #W #[fg=#ffa500,bg=default] '
 
 unbind [
 bind Escape copy-mode
@@ -39,6 +45,7 @@ unbind p
 bind-key p paste-buffer
 
 bind-key a "detach-client -a"
+bind-key K "kill-session"
 bind-key -n C-F11 set -g status
 
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
