remove detach-client binding

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,7 +44,9 @@ bind Escape copy-mode
 unbind p
 bind-key p paste-buffer
 
-bind-key a "detach-client -a"
+# disable because it does now work on older tmux
+# bind-key a "detach-client -a"
+
 bind-key K "kill-session"
 bind-key -n C-F11 set -g status
 
