--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,16 +27,16 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-left-length 85
 set -g status-right-length 85
-set -g status-bg default
+set -g status-bg #1e1e1e
 
-set-option -g status-left "#[fg=#444155,bg=#ffa500,bold] 💻 #S  #[bg=default,fg=#ffa500,bold]  "
+set-option -g status-left "#[fg=#444155,bg=#ffa500,bold] 💻 #S  #[bg=#1e1e1e,fg=#ffa500,bold]  "
 set-option -g status-right ""
 
-set-option -g window-style 'fg=#444444,bg=default'
-set-option -g window-active-style 'fg=#ffffff,bg=default'
+set-option -g window-style 'fg=#444444,bg=#1e1e1e'
+set-option -g window-active-style 'fg=#ffffff,bg=#1e1e1e'
 
 setw -g window-status-format '#[fg=#aaaaaa,bg=default]#[fg=#333333,bg=#aaaaaa] #I #W #[fg=#aaaaaa,bg=default] '
-setw -g window-status-current-format '#[fg=#444155,bg=#ffa500] #I #W #[fg=#ffa500,bg=default] '
+setw -g window-status-current-format '#[fg=#ffa500,bg=default]#[fg=#444155,bg=#ffa500] #I #W #[fg=#ffa500,bg=default] '
 
 unbind [
 bind Escape copy-mode
