add dynamic tiling to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,12 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-sessionist     \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-continuum      \
+  jabirali/tmux-tilish             \
+  sunaku/tmux-navigate             \
 '
+
+# Plugin options.
+set -g @tilish-navigate 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
 
