add tmux package manager install if needed

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,10 @@ set -g @tpm_plugins '              \
 # Plugin options.
 set -g @tilish-navigate 'on'
 
+# Install `tpm` if needed.
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g @continuum-restore 'on'
