add popup terms to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,5 +58,7 @@ bind-key p paste-buffer
 
 bind-key K "kill-session"
 bind-key -n C-F11 set -g status
+bind-key t display-popup fish
+bind-key g display-popup lazygit
 
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
