tmux: rebind display-popup shell

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,6 +58,6 @@ bind-key p paste-buffer
 
 bind-key K "kill-session"
 bind-key -n C-F11 set -g status
-bind-key -n M-space display-popup -E -w 85% -h 85% "fish"
+bind-key t display-popup -E -w 85% -h 85% "fish"
 
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
