--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ run '~/.tmux/plugins/tpm/tpm'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
-set -g status-position bottom
+set -g status-position top
 set -g status-justify left
 set -g status-left-length 85
 set -g status-right-length 85
@@ -52,12 +52,9 @@ bind Escape copy-mode
 
 unbind p
 bind-key p paste-buffer
-
-# disable because it does now work on older tmux
-# bind-key a "detach-client -a"
-
+bind-key a "detach-client -a"
 bind-key K "kill-session"
-bind-key -n C-F11 set -g status
 bind-key t display-popup -E -w 85% -h 85% "fish"
-
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+bind-key -n C-F11 set -g status
