tmux: experimental tweaks

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,8 @@ set -g mouse on
 setw -g mode-keys vi
 set -sg escape-time 0
 set -g display-panes-time 2500
+# set -as terminal-features ",gnome*:RGB"
+set -as terminal-overrides ",gnome*:Tc"
 
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
@@ -22,6 +24,8 @@ set -g @tpm_plugins '              \
 
 # Plugin options.
 set -g @tilish-navigate 'on'
+set -g @tilish-default 'main-vertical'
+set -g @tilish-prefix 'M-space'
 
 # Install `tpm` if needed.
 if "test ! -d ~/.tmux/plugins/tpm" \
@@ -32,8 +36,8 @@ run '~/.tmux/plugins/tpm/tpm'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
-set -g status-position top
-set -g status-justify left
+set -g status-position bottom
+set -g status-justify centre
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-bg "#1e1e1e"
@@ -41,7 +45,7 @@ set -g status-bg "#1e1e1e"
 set-option -g status-left "#[fg=#444155,bg=aqua,bold] 💻 #S  #[bg=#1e1e1e,fg=#aaaaaa,bold]  "
 set-option -g status-right ""
 
-# set-option -g window-style 'fg=#444444,bg=#1e1e1e'
+# set-option -g window-style 'fg=#ffffff,bg=#1e1e1e'
 # set-option -g window-active-style 'fg=#ffffff,bg=#1e1e1e'
 
 setw -g window-status-format '#[fg=#aaaaaa,bg=#1e1e1e] #I #W #[fg=#aaaaaa,bg=default] '
