make status a bit prettier w/ nerdfonts and transparencies

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,20 +36,18 @@ run '~/.tmux/plugins/tpm/tpm'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
+set -g status-interval 30
 set -g status-position bottom
 set -g status-justify centre
 set -g status-left-length 85
 set -g status-right-length 85
-set -g status-bg "#1e1e1e"
+set -g status-style bg=default
 
-set-option -g status-left "#[fg=#444155,bg=aqua,bold] 💻 #S  #[bg=#1e1e1e,fg=#aaaaaa,bold]  "
-set-option -g status-right ""
+set-option -g status-left "#[fg=#ffffff,bg=default,bold]  #S  #[bg=#1e1e1e,fg=#aaaaaa,bold]"
+set-option -g status-right "#(date +' %D  %H:%M')"
 
-# set-option -g window-style 'fg=#ffffff,bg=#1e1e1e'
-# set-option -g window-active-style 'fg=#ffffff,bg=#1e1e1e'
-
-setw -g window-status-format '#[fg=#aaaaaa,bg=#1e1e1e] #I #W #[fg=#aaaaaa,bg=default] '
-setw -g window-status-current-format '#[fg=#ffa500,bg=default]#[fg=#444155,bg=#aaaaaa] #I #W #[fg=#ffa500,bg=default] '
+setw -g window-status-format '#[fg=#aaaaaa,bg=default,bold] #I #W '
+setw -g window-status-current-format '#[fg=#ffffff,bg=default,bold] #[fg=#444155,bg=#ffffff,bold] #I #W #[fg=#ffffff,bg=default,bold] '
 
 unbind [
 unbind p
