some more work on the status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g prefix C-a
+set -g prefix M-space
 set -g default-terminal "xterm-256color"
 set -g base-index 1
 set -g pane-base-index 1
@@ -16,16 +16,18 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-pain-control   \
   tmux-plugins/tmux-copycat        \
   tmux-plugins/tmux-sessionist     \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-continuum      \
   jabirali/tmux-tilish             \
   sunaku/tmux-navigate             \
+  tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-continuum      \
 '
 
 # Plugin options.
 set -g @tilish-navigate 'on'
 set -g @tilish-default 'main-vertical'
-set -g @tilish-prefix 'M-space'
+# set -g @tilish-prefix 'M-space'
+
+set -g @resurrect-strategy-nvim 'session'
 
 # Install `tpm` if needed.
 if "test ! -d ~/.tmux/plugins/tpm" \
@@ -38,12 +40,12 @@ set -g @continuum-boot 'on'
 
 set -g status-interval 30
 set -g status-position bottom
-set -g status-justify centre
+set -g status-justify left
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
 
-set-option -g status-left "#[fg=#ffffff,bg=default,bold]  #S  #[bg=#1e1e1e,fg=#aaaaaa,bold]"
+set-option -g status-left "#[fg=#ffffff,bg=#b1951d,bold]  #S@#(hostname) #[bg=#292b2e,fg=#aaaaaa,bold] #{s|$HOME|~|:pane_current_path} "
 set-option -g status-right "#(date +' %D  %H:%M')"
 
 setw -g window-status-format '#[fg=#aaaaaa,bg=default,bold] #I #W '
@@ -52,6 +54,10 @@ setw -g window-status-current-format '#[fg=#ffffff,bg=default,bold] #[fg=#444155
 unbind [
 unbind p
 
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 bind Escape copy-mode
 
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
@@ -59,8 +65,9 @@ bind-key p paste-buffer
 bind-key a "detach-client -a"
 bind-key K "kill-session"
 
-bind-key t display-popup fish
-bind-key g display-popup lazygit
-bind-key t display-popup -E -w 85% -h 85% "fish"
+bind-key t display-popup -d '#{pane_current_path}' fish
+bind-key G display-popup -d '#{pane_current_path}' lazygit
+bind-key h display-popup -d '#{pane_current_path}' htop
+bind-key t display-popup -d '#{pane_current_path}' -E -w 85% -h 85% "fish"
 
 bind-key -n C-F11 set -g status
