tmux: auto update renumber windows; increase legibility of status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@ set -g mouse on
 setw -g mode-keys vi
 set -sg escape-time 0
 set -g display-panes-time 2500
-# set -as terminal-features ",gnome*:RGB"
+set -g renumber-windows on
 set -as terminal-overrides ",gnome*:Tc"
 
 set -g @tpm_plugins '              \
@@ -45,11 +45,11 @@ set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
 
-set-option -g status-left "#[fg=#ffffff,bg=#b1951d,bold]  #S@#(hostname) #[bg=#292b2e,fg=#aaaaaa,bold] #{s|$HOME|~|:pane_current_path} "
+set-option -g status-left "#[fg=#292b2e,bg=#b1951d,bold]  #S@#(hostname) #[bg=#292b2e,fg=#aaaaaa,bold]  #{s|$HOME|~|:pane_current_path} "
 set-option -g status-right "#(date +' %D  %H:%M')"
 
-setw -g window-status-format '#[fg=#aaaaaa,bg=default,bold] #I #W '
-setw -g window-status-current-format '#[fg=#ffffff,bg=default,bold] #[fg=#444155,bg=#ffffff,bold] #I #W #[fg=#ffffff,bg=default,bold] '
+setw -g window-status-format '#[fg=#aaaaaa,bg=default,bold] #W '
+setw -g window-status-current-format '#[fg=#ffffff,bg=default,bold] #[fg=#444155,bg=#ffffff,bold] #W #[fg=#ffffff,bg=default,bold] '
 
 unbind [
 unbind p
