--- a/taskwarrior/.taskrc
+++ b/taskwarrior/.taskrc
@@ -16,3 +16,4 @@ data.location=~/Sync/task
 #include /usr/share/taskwarrior/solarized-dark-256.theme
 #include /usr/share/taskwarrior/solarized-light-256.theme
 #include /usr/share/taskwarrior/no-color.theme
+news.version=2.6.0
