tmux: set popup window size to 85% width & height

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,9 +65,10 @@ bind-key p paste-buffer
 bind-key a "detach-client -a"
 bind-key K "kill-session"
 
-bind-key t display-popup -E -d '#{pane_current_path}' fish
-bind-key G display-popup -E -d '#{pane_current_path}' lazygit
-bind-key h display-popup -E -d '#{pane_current_path}' htop
-bind-key t display-popup -d '#{pane_current_path}' -E -w 85% -h 85% "fish"
+bind-key t display-popup -E -d '#{pane_current_path}' -w 85% -h 85% fish
+bind-key r display-popup -E -d '#{pane_current_path}' -w 85% -h 85% ranger
+bind-key g display-popup -E -d '#{pane_current_path}' -w 85% -h 85% lazygit
+bind-key h display-popup -E -d '#{pane_current_path}' -w 85% -h 85% htop
+bind-key t display-popup -E -d '#{pane_current_path}' -w 85% -h 85% "fish"
 
 bind-key -n C-F11 set -g status
