tmux: powerline patched status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,16 +40,16 @@ set -g @continuum-boot 'on'
 
 set -g status-interval 30
 set -g status-position bottom
-set -g status-justify left
+set -g status-justify centre
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
 
-set-option -g status-left "#[fg=#292b2e,bg=#b1951d,bold]  #S@#(hostname) #[bg=#292b2e,fg=#aaaaaa,bold]  #{s|$HOME|~|:pane_current_path} "
-set-option -g status-right "#(date +' %D  %H:%M')"
+set-option -g status-left "#[fg=#292b2e,bg=#b1951d,bold]  #S@#(hostname) #[bg=default, fg=#b1951d] #[bg=default,fg=#aaaaaa,bold]  #{s|$HOME|~|:pane_current_path}  "
+set-option -g status-right "  #(date +' %D  %H:%M')"
 
 setw -g window-status-format '#[fg=#aaaaaa,bg=default,bold] #W '
-setw -g window-status-current-format '#[fg=#ffffff,bg=default,bold] #[fg=#444155,bg=#ffffff,bold] #W #[fg=#ffffff,bg=default,bold] '
+setw -g window-status-current-format '#[fg=#ffffff,bg=default,bold] #[fg=#444155,bg=#aaaaaa,bold] #W #[fg=#ffffff,bg=default,bold] '
 
 unbind [
 unbind p
@@ -69,5 +69,6 @@ bind-key t display-popup -E -d '#{pane_current_path}' -w 85% -h 85% fish
 bind-key r display-popup -E -d '#{pane_current_path}' -w 85% -h 85% ranger
 bind-key g display-popup -E -d '#{pane_current_path}' -w 85% -h 85% lazygit
 bind-key h display-popup -E -d '#{pane_current_path}' -w 85% -h 85% htop
+bind-key m display-popup -E -d '#{pane_current_path}' -w 65% -h 65% fish
 
 bind-key -n C-F11 set -g status
