add tabs to window status; remap config reload to F2

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,8 +48,8 @@ set -g status-style bg=default
 set-option -g status-left "#[fg=#292b2e,bg=#b1951d,bold]  #S@#(hostname) #[bg=default, fg=#b1951d] #[bg=default,fg=#aaaaaa,bold]  #{s|$HOME|~|:pane_current_path}  "
 set-option -g status-right "  #(date +' %D  %H:%M')"
 
-setw -g window-status-format '#[fg=#aaaaaa,bg=default,bold] #W '
-setw -g window-status-current-format '#[fg=#ffffff,bg=default,bold] #[fg=#444155,bg=#aaaaaa,bold] #W #[fg=#ffffff,bg=default,bold] '
+setw -g window-status-format '#[fg=#666666,bg=default,bold] ╭─ #W ─╮'
+setw -g window-status-current-format '#[fg=#aaaaaa,bg=default,bold]╭─#[fg=#aaaaaa,bg=default,bold] #W #[fg=#aaaaaa,bg=default,bold]─╮'
 
 unbind [
 unbind p
@@ -60,7 +60,6 @@ bind % split-window -h -c "#{pane_current_path}"
 
 bind Escape copy-mode
 
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 bind-key p paste-buffer
 bind-key a "detach-client -a"
 bind-key K "kill-session"
@@ -71,4 +70,5 @@ bind-key g display-popup -E -d '#{pane_current_path}' -w 85% -h 85% lazygit
 bind-key h display-popup -E -d '#{pane_current_path}' -w 85% -h 85% htop
 bind-key m display-popup -E -d '#{pane_current_path}' -w 65% -h 65% fish
 
+bind-key -n F2 source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 bind-key -n C-F11 set -g status
