--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g prefix M-space
+set -g prefix C-space
 set -g default-terminal "xterm-256color"
 set -g base-index 1
 set -g pane-base-index 1
