--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,7 @@ setw -g mode-keys vi
 set -sg escape-time 0
 set -g display-panes-time 2500
 set -g renumber-windows on
-set -as terminal-overrides ",gnome*:Tc"
+set -sa terminal-overrides ",xterm*:Tc"
 
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
@@ -48,7 +48,7 @@ set -g status-style bg=default
 set-option -g status-left "#[fg=#292b2e,bg=#b1951d,bold]  #S@#(hostname) #[bg=default, fg=#b1951d] #[bg=default,fg=#aaaaaa,bold]  #{s|$HOME|~|:pane_current_path}  "
 set-option -g status-right "  #(date +' %D  %H:%M')"
 
-setw -g window-status-format '#[fg=#666666,bg=default,bold]╭─ #W ─╮'
+setw -g window-status-format '#[fg=#666666,bg=default,bold] ╭─ #W ─╮'
 setw -g window-status-current-format '#[fg=#aaaaaa,bg=default,bold]╭─#[fg=#aaaaaa,bg=default,bold] #W #[fg=#aaaaaa,bg=default,bold]─╮'
 
 unbind [
