tmux: add battery to status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,6 +59,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 bind Escape copy-mode
+bind-key R source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 bind-key p paste-buffer
 bind-key a "detach-client -a"
@@ -74,5 +75,5 @@ bind-key -n F2 source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 bind-key -n C-F11 set -g status
 
 if-shell 'termux-battery-status' {
-  set-option -g status-right "battery  #(date +' %D  %H:%M')"
-  }
+  set-option -g status-right "#(termux-battery)  #(date +' %D  %H:%M')"
+}
