--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,16 +40,19 @@ set -g @continuum-boot 'on'
 
 set -g status-interval 30
 set -g status-position bottom
-set -g status-justify centre
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
 
-set-option -g status-left "#[fg=#292b2e,bg=#b1951d,bold]  #S@#(hostname) #[bg=default, fg=#b1951d] #[bg=default,fg=#aaaaaa,bold]  #{s|$HOME|~|:pane_current_path}  "
-# set-option -g status-right "  #(date +' %D  %H:%M')"
+set-option -g status-left "#[fg=#000000,bg=#eeeeee] #(uname)@#(hostname) #[fg=#eeeeee,bg=default]"
 
-setw -g window-status-format '#[fg=#666666,bg=default,bold] ╭─ #W ─╮'
-setw -g window-status-current-format '#[fg=#aaaaaa,bg=default,bold]╭─#[fg=#aaaaaa,bg=default,bold] #W #[fg=#aaaaaa,bg=default,bold]─╮'
+set-option -g status-right ""
+if-shell 'termux-battery-status' {
+  set-option -g status-right ""
+}
+
+setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
+setw -g window-status-format '#[fg=#dddddd, bg=#default,bold] #I #W '
 
 unbind [
 unbind p
@@ -73,7 +76,3 @@ bind-key m display-popup -E -d '#{pane_current_path}' -w 65% -h 65% fish
 
 bind-key -n F2 source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 bind-key -n C-F11 set -g status
-
-if-shell 'termux-battery-status' {
-  set-option -g status-right "#(termux-battery)  #(date +' %D  %H:%M')"
-}
