tmux: add fzf support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,7 @@ set -g @tpm_plugins '              \
   sunaku/tmux-navigate             \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-continuum      \
+  sainnhe/tmux-fzf                 \
 '
 
 # Plugin options.
