tmux: update left status to show session

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,7 @@ set -g @tpm_plugins '              \
 # Plugin options.
 set -g @tilish-navigate 'on'
 set -g @tilish-default 'main-vertical'
+set -g @tilish-dmenu 'on'
 # set -g @tilish-prefix 'M-space'
 
 set -g @resurrect-strategy-nvim 'session'
@@ -36,8 +37,8 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
+# set -g @continuum-restore 'on'
+# set -g @continuum-boot 'on'
 
 set -g status-interval 30
 set -g status-position bottom
@@ -45,7 +46,7 @@ set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
 
-set-option -g status-left "#[fg=#000000,bg=#eeeeee] #(uname)@#(hostname) #[fg=#eeeeee,bg=default]"
+set-option -g status-left "#[fg=#000000,bg=#eeeeee] #S@#(hostname) #[fg=#eeeeee,bg=default]"
 
 set-option -g status-right ""
 if-shell 'termux-battery-status' {
