tmux: update status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,11 +42,12 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g status-interval 30
 set -g status-position bottom
+set -g status-justify right
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
 
-set-option -g status-left "#[fg=#000000,bg=#eeeeee] #S@#(hostname) #[fg=#eeeeee,bg=default]"
+set-option -g status-left "#[fg=#333333,bg=#7aa2f7] #(whoami)@#(hostname) #[fg=#ffffff,bg=#414868] #S #[fg=#eeeeee,bg=default]"
 
 set-option -g status-right ""
 if-shell 'termux-battery-status' {
