tmux: move somethings around preppingto use tmux as window manager

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,7 +41,7 @@ run '~/.tmux/plugins/tpm/tpm'
 # set -g @continuum-boot 'on'
 
 set -g status-interval 30
-set -g status-position bottom
+set -g status-position top
 set -g status-justify right
 set -g status-left-length 85
 set -g status-right-length 85
@@ -78,4 +78,4 @@ bind-key h display-popup -E -d '#{pane_current_path}' -w 85% -h 85% htop
 bind-key m display-popup -E -d '#{pane_current_path}' -w 65% -h 65% fish
 
 bind-key -n F2 source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
-bind-key -n C-F11 set -g status
+bind-key -n F11 set -g status
