--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,8 @@
-set -g prefix C-space
+
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
 set -g default-terminal "xterm-256color"
 set -g base-index 1
 set -g pane-base-index 1
@@ -41,7 +45,7 @@ run '~/.tmux/plugins/tpm/tpm'
 # set -g @continuum-boot 'on'
 
 set -g status-interval 30
-set -g status-position top
+set -g status-position bottom
 set -g status-justify right
 set -g status-left-length 85
 set -g status-right-length 85
