update tmux status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,6 @@ set -g default-terminal "xterm-256color"
 set -g base-index 1
 set -g pane-base-index 1
 set -g mouse on
-setw -g mode-keys vi
 set -sg escape-time 0
 set -g display-panes-time 2500
 set -g renumber-windows on
@@ -45,17 +44,22 @@ run '~/.tmux/plugins/tpm/tpm'
 # set -g @continuum-boot 'on'
 
 set -g status-interval 30
-set -g status-position bottom
-set -g status-justify right
+set -g status-position top
+set -g status-justify left
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
+set -g status-style bg=colour235
 
-set-option -g status-left "#[fg=#333333,bg=#7aa2f7] #(whoami)@#(hostname) #[fg=#ffffff,bg=#414868] #S #[fg=#eeeeee,bg=default]"
+set -g window-style 'fg=colour247,bg=colour235'
+set -g window-active-style 'fg=colour250,bg=colour235'
 
-set-option -g status-right ""
+set-option -g status-left "#[fg=#ffffff,bg=#414868] #S #[fg=#eeeeee,bg=default]"
+
+set-option -g status-right "#(date +'%H:%M')"
+
 if-shell 'termux-battery-status' {
-  set-option -g status-right ""
+  set-option -g status-right "#(date +'%H:%M') |   #(termux-battery-status | jq .percentage)%% "
 }
 
 setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
@@ -75,7 +79,7 @@ bind-key p paste-buffer
 bind-key a "detach-client -a"
 bind-key K "kill-session"
 
-bind-key t display-popup -E -d '#{pane_current_path}' -w 85% -h 85% fish
+bind-key t display-popup -E -d '#{pane_current_path}' -w 45% -h 85% fish
 bind-key r display-popup -E -d '#{pane_current_path}' -w 85% -h 85% ranger
 bind-key g display-popup -E -d '#{pane_current_path}' -w 85% -h 85% lazygit
 bind-key h display-popup -E -d '#{pane_current_path}' -w 85% -h 85% htop
