--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,7 +56,7 @@ set -g window-active-style 'fg=colour250,bg=colour235'
 
 set-option -g status-left "#[fg=#ffffff,bg=#414868] #S #[fg=#eeeeee,bg=default]"
 
-set-option -g status-right "#(date +'%H:%M')"
+set-option -g status-right "#(date +'%H:%M') |  #(cat /sys/class/power_supply/BAT1/capacity)%% "
 
 if-shell 'termux-battery-status' {
   set-option -g status-right "#(date +'%H:%M') |   #(termux-battery-status | jq .percentage)%% "
