add connection type to tmux status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,9 +54,9 @@ set -g status-style bg=colour235
 set -g window-style 'fg=colour247,bg=colour235'
 set -g window-active-style 'fg=colour250,bg=colour235'
 
-set-option -g status-left "#[fg=#ffffff,bg=#414868] #S #[fg=#eeeeee,bg=default]"
+set-option -g status-left "#[fg=#ffffff,bg=#414868] #S #[fg=#eeeeee,bg=default] | #(~/bin/connection.sh) "
 
-set-option -g status-right "#(date +'%H:%M') |  #(cat /sys/class/power_supply/BAT1/capacity)%% "
+set-option -g status-right "#(date +'%H:%M') | 🔋 #(cat /sys/class/power_supply/BAT1/capacity)%% "
 
 if-shell 'termux-battery-status' {
   set-option -g status-right "#(date +'%H:%M') |   #(termux-battery-status | jq .percentage)%% "
