--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 
-set -g prefix C-space
+set -g prefix C-a
 unbind C-b
-bind C-space send-prefix
+bind C-a send-prefix
 
 set -g default-terminal "xterm-256color"
 set -g base-index 1
