Use emoji battery instead of font icon

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,7 +60,7 @@ set -g status-left "#{?#{!=:#{session_name},0},#[fg=colour2]Session: #{session_n
 set-option -g status-right "#(date +'%H:%M') | 🔋 #(cat /sys/class/power_supply/BAT1/capacity)%% "
 
 if-shell 'termux-battery-status' {
-  set-option -g status-right "#(date +'%H:%M') |   #(termux-battery-status | jq .percentage)%% "
+  set-option -g status-right "#(date +'%H:%M') | 🔋 #(termux-battery-status | jq .percentage)%% "
 }
 
 setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
