clean up tmux & add better battery status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,26 +26,24 @@ set -g @tpm_plugins '              \
   sainnhe/tmux-fzf                 \
 '
 
-# Plugin options.
-set -g @tilish-navigate 'on'
-set -g @tilish-default 'main-vertical'
-set -g @tilish-dmenu 'on'
-# set -g @tilish-prefix 'M-space'
-
-set -g @resurrect-strategy-nvim 'session'
-
 # Install `tpm` if needed.
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 run '~/.tmux/plugins/tpm/tpm'
 
-# set -g @continuum-restore 'on'
-# set -g @continuum-boot 'on'
+# Plugin options.
+set -g @tilish-navigate 'on'
+set -g @tilish-default 'main-vertical'
+set -g @tilish-dmenu 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @contimuum-restore 'on'
+set -g @continuum-boot 'on'
 
+# Status
 set -g status-interval 30
 set -g status-position top
-set -g status-justify left
+set -g status-justify center
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
@@ -54,14 +52,8 @@ set -g status-style bg=colour235
 set -g window-style 'fg=colour247,bg=colour235'
 set -g window-active-style 'fg=colour250,bg=colour235'
 
-# set-option -g status-left "#[fg=#ffffff,bg=#414868] #S #[fg=#eeeeee,bg=default] | #(~/bin/connection.sh) "
-set -g status-left "#{?#{!=:#{session_name},0},#[fg=colour2]Session: #{session_name},} #H #(~/bin/connection.sh) "
-
-set-option -g status-right "#(date +'%H:%M') | 🔋 #(cat /sys/class/power_supply/BAT1/capacity)%% "
-
-if-shell 'termux-battery-status' {
-  set-option -g status-right "#(date +'%H:%M') | 🔋 #(termux-battery-status | jq .percentage)%% "
-}
+set -g status-left "#{?#{!=:#{session_name},0}, #{session_name},} #H #(~/bin/connection.sh) "
+set-option -g status-right "#(date +'%H:%M') | #(~/bin/battery.sh)"
 
 setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
 setw -g window-status-format '#[fg=#dddddd, bg=#default,bold] #I #W '
@@ -69,6 +61,7 @@ setw -g window-status-format '#[fg=#dddddd, bg=#default,bold] #I #W '
 unbind [
 unbind p
 
+# Key bindings
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -87,4 +80,4 @@ bind-key h display-popup -E -d '#{pane_current_path}' -w 85% -h 85% htop
 bind-key m display-popup -E -d '#{pane_current_path}' -w 65% -h 65% fish
 
 bind-key -n F2 source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
-bind-key -n F11 set -g status
+bind-key -n C-F11 set -g status
