centre status in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,7 +43,7 @@ set -g @continuum-boot 'on'
 # Status
 set -g status-interval 30
 set -g status-position top
-set -g status-justify center
+set -g status-justify centre
 set -g status-left-length 85
 set -g status-right-length 85
 set -g status-style bg=default
