add username to tmux status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,7 +52,7 @@ set -g status-style bg=colour235
 set -g window-style 'fg=colour247,bg=colour235'
 set -g window-active-style 'fg=colour250,bg=colour235'
 
-set -g status-left "#{?#{!=:#{session_name},0}, #{session_name},} #H #(~/bin/connection.sh) "
+set -g status-left "#(~/bin/user.sh) | #{?#{!=:#{session_name},0}, #{session_name},} #(~/bin/connection.sh) "
 set-option -g status-right "#(date +'%H:%M') | #(~/bin/battery.sh)"
 
 setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
