--- a/taskwarrior/.taskrc
+++ b/taskwarrior/.taskrc
@@ -40,3 +40,9 @@ data.location=~/Tasks
 #include solarized-light-256.theme
 #include no-color.theme
 
+uda.reviewed.type=date
+uda.reviewed.label=Reviewed
+report._reviewed.description=Tasksh review report.  Adjust the filter to your needs.
+report._reviewed.columns=uuid
+report._reviewed.sort=reviewed+,modified+
+report._reviewed.filter=( reviewed.none: or reviewed.before:now-6days ) and ( +PENDING or +WAITING )
