update tmux status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,7 +24,6 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-continuum      \
   sainnhe/tmux-fzf                 \
-  fabioluciano/tmux-tokyo-night    \
 '
 
 # Install `tpm` if needed.
@@ -44,20 +43,21 @@ set -g @continuum-boot 'on'
 # Status
 # set -g status-interval 30
 set -g status-position top
-# set -g status-justify centre
-# set -g status-left-length 85
-# set -g status-right-length 85
-# set -g status-style bg=default
-# set -g status-style bg=colour235
+set -g status-justify centre
+set -g status-left-length 85
+set -g status-right-length 85
+set -g status-style bg=default
+set -g status-style bg=colour235
+set -g status-style bg=#444444
 
-# set -g window-style 'fg=colour247,bg=colour235'
-# set -g window-active-style 'fg=colour250,bg=colour235'
+set -g window-style 'fg=colour247,bg=colour235'
+set -g window-active-style 'fg=colour250,bg=colour235'
 
-# set -g status-left " #(~/bin/user.sh) | #{?#{!=:#{session_name},0}, #{session_name},} #(~/bin/connection.sh) "
-# set-option -g status-right "#(date +'%H:%M') | #(~/bin/battery.sh)"
+set -g status-left "#[fg=#ffffff, bg=#000000] #{?#{!=:#{session_name},0}, #{session_name},} #[fg=default, bg=#444444] #(~/bin/connection.sh) "
+set-option -g status-right "#(date +'%H:%M') | #(~/bin/battery.sh)"
 
-# setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
-# setw -g window-status-format '#[fg=#dddddd, bg=#default,bold] #I #W '
+setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
+setw -g window-status-format '#[fg=#dddddd, bg=#default,bold] #I #W '
 
 unbind [
 unbind p
