--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,7 @@ set -sg escape-time 0
 set -g display-panes-time 2500
 set -g renumber-windows on
 set -sa terminal-overrides ",xterm*:Tc"
+set -g default-command 'reattach-to-user-namespace $SHELL --login'
 
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
@@ -41,7 +42,7 @@ set -g @contimuum-restore 'on'
 set -g @continuum-boot 'on'
 
 # Status
-# set -g status-interval 30
+set -g status-interval 60
 set -g status-position top
 set -g status-justify centre
 set -g status-left-length 85
@@ -53,7 +54,7 @@ set -g status-style bg=#444444
 set -g window-style 'fg=colour247,bg=colour235'
 set -g window-active-style 'fg=colour250,bg=colour235'
 
-set -g status-left "#[fg=#ffffff, bg=#000000] #{?#{!=:#{session_name},0}, #{session_name},} #[fg=default, bg=#444444] #(~/bin/connection.sh) "
+set -g status-left "#[fg=#ffffff, bg=#000000] #(~/bin/user.sh) #[fg=default, bg=#444444] #{?#{!=:#{session_name},0}, #{session_name},} #(~/bin/connection.sh) "
 set-option -g status-right "#(date +'%H:%M') | #(~/bin/battery.sh)"
 
 setw -g window-status-current-format '#[fg=#000000,bg=#aaaaaa,bold] #I #W '
